[project]
name = "bayesian-neural-network"
version = "0.1.0"
description = "Bayesian Neural Network"
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "bayesian_neural_network"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.2.3"
jax = "^0.5.0"
numpyro = "^0.17.0"
scipy = "^1.15.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^2.20.0"
ruff = "^0.0.202"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"